--- a/sass/_partials/_body.scss
+++ b/sass/_partials/_body.scss
@@ -249,7 +249,7 @@ body {
 
             &_img {
                 object-fit: cover;
-                height: 180px;
+                height: auto;
                 width: 100%;
                 border-radius: 15px 15px 0px 0px;
 
